# GenAI-NK

1_paskaita/: ai-theory.txt  main.py  output.txt  plan.md  pyproject.toml  python basics.txt  requirements.txt  urs.txt
1_paskaita/examples/ai-assisted/: copilot-demo.py
1_paskaita/examples/function-calling/: function-calling.ipynb  functional-call.py
1_paskaita/examples/notebooks/: example.ipynb
1_paskaita/examples/openai-client/: github_model_demo.py  github_model_openai_demo.py  openai_client_demo.py  structure_demo.py
1_paskaita/examples/rag/: birzai-pasvalys-chatbot.ipynb  rag-test.ipynb
1_paskaita/examples/streamlit/: demo.py
1_paskaita/examples/streamlit-chatbot/: main.py  pyproject.toml
1_paskaita/homework/: 1.txt  3.txt  4.txt  5.txt  6.txt  7.txt
Streamlit_demo/: main.py  pyproject.toml
